<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cleaner_edit_profile">

    <ImageView
        android:id="@+id/c_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/add_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/cleaner_editFullName"/>

    <EditText
        android:id="@+id/et_cleaner_name"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="178dp"
        android:hint="Jessie Lim" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/cleaner_editUserName"/>

    <EditText
        android:id="@+id/et_cleaner_username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="210dp"
        android:hint="Jessie" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/cleaner_editAge"/>

    <EditText
        android:id="@+id/et_cleaner_age"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="240dp"
        android:hint="45" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/cleaner_editYearsExp"/>

    <EditText
        android:id="@+id/et_cleaner_yearsExp"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="270dp"
        android:hint="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/cleaner_editHP"/>

    <EditText
        android:id="@+id/et_cleaner_hp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="300dp"
        android:hint="017-5564723" />

    <TextView
        android:id="@+id/c_tv_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/cleaner_edit_ServiceTitle"/>


    <CheckBox
        android:id="@+id/cb_edit_bhk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="400dp"
        android:text="@string/Service_1" />

    <CheckBox
        android:id="@+id/cb_edit_sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="430dp"
        android:text="@string/Service_2"/>

    <CheckBox
        android:id="@+id/cb_edit_cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="400dp"
        android:text="@string/Service_4" />

    <CheckBox
        android:id="@+id/cb_edit_inout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="430dp"
        android:text="@string/Service_5"/>

    <CheckBox
        android:id="@+id/cb_edit_occ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="460dp"
        android:text="@string/Service_3" />

    <Button
        android:id="@+id/btn_cleaner_profile_update"
        android:layout_height="wrap_content"
        android:layout_width="400dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="550dp"
        android:text="@string/cleaner_editUpdate"
        android:backgroundTint="@color/dark_blue"/>

</RelativeLayout>