<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".email_verification"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailVerificationText"
        android:layout_gravity="center"
        android:text="@string/emailVerificationText"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailVerificationBtn"
        android:id="@+id/emailVerificationBtn"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/emailVerificationContinueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/emailVerificationContinueBtn" />

</LinearLayout>