<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AdminAddFaqActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_addFaq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/edit_faq_title"
                android:textSize="25sp"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/faq_title_secondary"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:hint="@string/faq_title"/>

            <TextView
                android:id="@+id/tx_detail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:text="@string/complaint_details"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/edit_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:hint="@string/faq_desc"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_edit"
            android:gravity="center|center_vertical"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <include
        android:id="@+id/progress_service"
        layout="@layout/tool_progress_indicator"
        android:visibility="invisible"/>


</RelativeLayout>