<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_customer"
    android:background="@color/main"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:text="@string/registerAsCustomer"
        android:textSize="30dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8C8787"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/registerImage"
            android:textSize="18dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/registerProfilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/add_image"
            android:clickable="true"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerFullName"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerFullName"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="TAN PEN THE"
            android:padding="6dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerEmail"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="exmaple@email.com"
            android:inputType="textEmailAddress"
            android:padding="6dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerContactNo"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerContactNo"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="0123456789"
            android:inputType="textEmailAddress"
            android:padding="6dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerUsername"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="Tan"
            android:padding="6dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerPassword"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:inputType="textPassword"
            android:padding="6dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerConfPassword"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerConfPassword"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:inputType="textPassword"
            android:padding="6dp" />


    </LinearLayout>

    <Button
        android:id="@+id/registerBtnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/registerBtnCreateAccount"
        app:iconPadding="10dp"
        android:background="@color/purple_700"/>

    <Button
        android:id="@+id/registerBtnToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registerBtnToLogin"
        app:iconPadding="10dp"
        android:background="@color/purple_700"/>


</LinearLayout>