<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main"
    tools:context=".reset_password">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/resetPasswordEmail" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetBtn"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/resetBackBtn"
        tools:visibility="gone" />


</LinearLayout>